--- a/HelpDesk v1/WebContent/index.zul
+++ b/HelpDesk v1/WebContent/index.zul
@@ -6,5 +6,60 @@ contentType="text/html;charset=UTF-8"
 
 <zk xmlns:n="native">
 <include src="menu.zul"/>
+
+<vlayout apply="org.zkoss.bind.BindComposer" 
+	viewModel="@id('vm') @init('pie.PieChartConfigVM')">
+	<grid width="98%">
+	</grid>
+	<separator height="10px" />
+	<groupbox sclass="z-demo-config">
+		<caption>Valdymas</caption>
+		<radiogroup>
+			<vlayout>
+				<radio label="Pie Chart" selected="true"
+					onCheck="@global-command('configChanged', threeD=false, exploded=false)" />			
+				<radio label="Pie Chart 3D"
+					onCheck="@global-command('configChanged', threeD=true, exploded=false)" />
+				<radio label="Pie Chart Exploded"
+					onCheck="@global-command('configChanged', threeD=false, exploded=true)" />
+			</vlayout>
+		</radiogroup>
+	</groupbox>		
+</vlayout>
+
+<vlayout apply="org.zkoss.bind.BindComposer"
+    viewModel="@id('vm') @init('pie.PieChartVM')">
+    <chart id="mychart" title="Kreipinių statistika"
+        width="550" height="400" paneColor="#ffffff" fgAlpha="192"
+        type="pie" threeD="@bind(vm.threeD)"
+        model="@bind(vm.model)" engine="@bind(vm.engine)"
+        onClick="@command('showMessage',msg=event.areaComponent.tooltiptext)"/>
+    <hlayout  visible="@bind(not empty vm.message)">
+        Jūs žiūrite :<label value="@bind(vm.message)"/>
+    </hlayout>
+    
+    <vlayout apply="org.zkoss.bind.BindComposer">
+ 	<groupbox closable="false" sclass="z-demo-config">
+        <caption label="Type Control" />
+        <vlayout>
+            <checkbox label="Toggle 3D Bar Chart" checked="false"
+            	onCheck="@global-command('configChanged', threeD=self.checked)"/>
+            <checkbox label="Horizontal" checked="true"
+            	onCheck="@global-command('configChanged', orient=self.checked?'horizontal':'vertical')"/>
+        </vlayout>
+    </groupbox>
+</vlayout>
+    
+    <vlayout apply="org.zkoss.bind.BindComposer"
+    viewModel="@id('vm') @init('bar.BarChartVM')">
+    <chart id="mybarchart" width="520" height="400"
+        fgAlpha="255" paneColor="#ffffff" bgColor="#ffffff" type="bar"
+        threeD="@bind(vm.threeD)" orient="@bind(vm.orient)"
+        model="@bind(vm.model)" engine="@bind(vm.engine)"/>
+        
+</vlayout>
+    
+</vlayout>    
+
 <include src="footer.zul"/>
 </zk>
