--- a/HelpDesk v1/WebContent/taskRegistrationForm.zul
+++ b/HelpDesk v1/WebContent/taskRegistrationForm.zul
@@ -4,20 +4,20 @@
 contentType="text/html;charset=UTF-8"
 ?>
 
-<window height="550px" width="700px" closable="true"
-	contentStyle="overflow:auto" 
-	title="Kreipinio registracija"
-	border="normal" 
-	apply="mainControllers.TaskRegistrationController" >
+<window id="taskRegistration" height="550px" width="500px" contentStyle="overflow:auto"
+ 
+	apply="mainControllers.TaskRegistrationController">
+	<groupbox mold="3d">
+	<caption label="Kreipinio registracija"> </caption>
 	<grid>
 		<columns>
-			<column />
+			<column width="40%"/>
 			<column />
 		</columns>
 		<rows>
 			<row>
 				<label value="Klientas"></label>
-				<combobox id="klientas">
+				<combobox id="klientas" width="100%" readonly="true">
 					<template name="model">
 						<comboitem label="${each.name}" />
 					</template>
@@ -25,7 +25,7 @@ contentType="text/html;charset=UTF-8"
 			</row>
 			<row>
 				<label value="Kreipinio gavimo būdas"></label>
-				<combobox id="gavimoBudas">
+				<combobox id="gavimoBudas" width="100%" readonly="true">
 					<comboitem label="Telefonu" />
 					<comboitem label="El. paštu" />
 					<comboitem label="Savitarnoje" />
@@ -33,14 +33,14 @@ contentType="text/html;charset=UTF-8"
 			</row>
 			<row>
 				<label value="Tipas"></label>
-				<combobox id="tipas">
+				<combobox id="tipas" width="100%" readonly="true">
 					<comboitem label="Incidentas" />
 					<comboitem label="Užklausimas" />
 				</combobox>
 			</row>
 			<row>
 				<label value="Paslauga"></label>
-				<combobox id="paslauga">
+				<combobox id="paslauga" width="100%" readonly="true">
 					<comboitem label="Virtualūs serveriai" />
 					<comboitem label="Rezervinis kopijavimas" />
 					<comboitem label="Kitas šūdas" />
@@ -48,16 +48,17 @@ contentType="text/html;charset=UTF-8"
 			</row>
 			<row>
 				<label value="Priskirti"></label>
-				<combobox id="priskirti">
+				<combobox id="priskirti" width="100%" readonly="true">
 					<template name="model">
-						<comboitem label="${each.firstName} ${each.surName}" />
+						<comboitem
+							label="${each.firstName} ${each.surName}" />
 					</template>
 				</combobox>
 			</row>
 			<row>
 				<label value="Išspręsti iki"></label>
-				<datebox id="issprestiIkiDateBox" cols="12" format="short "
-					onCreate="self.value = new Date()" mold="rounded" />
+				<datebox id="issprestiIkiDateBox" width="100%"
+					 onCreate="self.value = new Date()" mold="rounded" />
 			</row>
 
 		</rows>
@@ -69,52 +70,27 @@ contentType="text/html;charset=UTF-8"
 
 		<rows>
 			<row>
-				<textbox placeholder="Įrašykite temą..." id="tema" cols="200" />
+				<textbox placeholder="Įrašykite temą..." id="tema"
+					cols="200" />
 			</row>
 
 
-			<row>
-				<vlayout>
-					<button label="Pridėti failą" upload="true">
-						<attribute name="onUpload">
-							org.zkoss.util.media.Media media =
-							event.getMedia();
-							if (media instanceof org.zkoss.image.Image) {
-							org.zkoss.image.Image img = (org.zkoss.image.Image) media;
-							if
-							(img.getWidth() > img.getHeight()){
-							if (img.getHeight() > 300) {
-							pics.setHeight("100px");
-							pics.setWidth(img.getWidth() * 100 /
-							img.getHeight() + "px");
-							}
-							}
-							if (img.getHeight() > img.getWidth()){
-							if (img.getWidth() > 400) {
-							pics.setWidth("400px");
-							pics.setHeight(img.getHeight() * 400 / img.getWidth() + "px");
-							}
-							}
-							pics.setContent(img);
-							} else {
-							Messagebox.show("Not an image:"+media, "Error", Messagebox.OK, Messagebox.ERROR);
-							break; //not to show too many errors
-							}
-						</attribute>
-					</button>
-					<image id="pics" />
-				</vlayout>
-			</row>
+		
 
 			<row>
-				<textbox placeholder="Įrašykite aprašymą..." id="aprasymas"
-					rows="10" cols="200" />
+				<textbox placeholder="Įrašykite aprašymą..."
+					id="aprasymas" rows="10" cols="200" />
 			</row>
 		</rows>
 	</grid>
-	<button id="sukurtiKreipini" label="Sukurti" width="100px"
-		height="30px"></button>
+	<hbox>
+		<button id="sukurtiKreipini" label="Sukurti" width="100px">
+		</button>
+		<button id="cancelClientButton"
+			onClick="taskRegistration.detach()" label="Atšaukti"
+			width="100px" top="">
+		</button>
+	</hbox>
 
-
-
+</groupbox>
 </window>
