--- a/HelpDesk v1/WebContent/profileEmployee.zul
+++ b/HelpDesk v1/WebContent/profileEmployee.zul
@@ -1,4 +1,4 @@
-<?page title="Klientas" contentType="text/html;charset=UTF-8" title="Profilis"?>
+<?page title="Profilis" contentType="text/html;charset=UTF-8"?>
 <zk xmlns:n="native">
 <include src="menu.zul" />
 <groupbox sclass="footerUp">
@@ -11,18 +11,17 @@
 				<a href="index.zul"
 					label="Pagrindinis" class="cg-down-title" />
 				»
-				<a href="profileClient.zul"
+				<a href="profileEmployee.zul"
 					label="Profilis" class="cg-down-title" />
 				</hbox>
 				</vbox>
 			</hbox>     
             </groupbox>
-<hbox>
-<groupbox title="Kliento Informacija" apply="mainControllers.ClientProfileViewController">
+<groupbox title="Darbuotojo informacija" apply="mainControllers.EmployeeProfileViewController">
     <vlayout>
         <grid width="500px">
             <columns>
-                <column align="right" hflex="min"/>
+                <column align="right" width="150px"/>
                 <column/>
             </columns>
             <rows>
@@ -33,96 +32,62 @@
                                 <row>
                     <cell sclass="row-title">Senas slaptažodis :</cell>
                     <cell>
-                        <textbox id="oldPassword" type="password"/>
+                        <textbox id="oldPassword" type="password" width="200px"/>
                     </cell>
                 </row>
                                 <row>
                     <cell sclass="row-title">Naujas slaptažodis :</cell>
                     <cell>
-                        <textbox id="newPassword" type="password"/>
+                        <textbox id="newPassword" type="password" width="200px"/>
                     </cell>
                 </row>
                                 <row>
                     <cell sclass="row-title">Pakartokite slaptažodį :</cell>
                     <cell>
-                        <textbox id="newRepPassword" type="password"/>
+                        <textbox id="newRepPassword" type="password" width="200px"/>
                     </cell>
                 </row>
                 <row>
-                    <cell sclass="row-title">Pavadinimas :</cell>
+                    <cell sclass="row-title">Vardas :</cell>
                     <cell>
-                        <textbox id="Name"
-                        constraint="no empty: Iveskite pavadinimÄ…!" width="200px"/>
+                        <textbox id="firstName"
+                        constraint="no empty: Įveskite vardą!" width="200px"/>
                     </cell>
                 </row>
-                                <row>
-                    <cell sclass="row-title">Kodas :</cell>
+                <row>
+                    <cell sclass="row-title">Pavardė :</cell>
                     <cell>
-                        <label id="Code" width="200px"/>
+                        <textbox id="lastName"
+                        constraint="no empty: Įveskite Pavardę!" width="200px"/>
                     </cell>
                 </row>
                 <row>
-                    <cell sclass="row-title">Adresas :</cell>
+                    <cell sclass="row-title">Elektroninis paštas :</cell>
                     <cell>
-                        <textbox id="Address"
-                        constraint="no empty: Iveskite adresÄ…!" width="200px"/>
+                        <textbox id="eMail"
+                        constraint="/.+@.+\.[a-z]+/: Įveskite elektroninio pašto adresą." width="200px"/>
                     </cell>
                 </row>
                 <row>
-                    <cell sclass="row-title">El. pašto adresai</cell>
-                    <cell id="cellGridMail">
-                        <textbox inplace="true" id="mails" width="200px"/>
-                    </cell>
-                </row>
-                <row>
-                    <cell sclass="row-title">Telefono nuemriai :</cell>
-                    <cell id="cellGridPhone"> 
-                        <textbox id="phone" inplace="true" width="200px"/>
+                    <cell sclass="row-title">Telefono numeris :</cell>
+                    <cell>
+                        <textbox id="phone" width="200px"/>
                     </cell>
                 </row>
                 <row>
                     <cell sclass="row-title">Teisės :</cell>
                     <cell><label id="rights"/></cell>
                 </row>               
+   
             </rows>
         </grid>
-        <groupbox title="Valdymas">
+        <groupbox title="Valdymas" width="500px">
         <hlayout>
             <button id="saveProfile" label="Išsaugoti"/>
             <button id="reloadProfile" label="Atnaujinti"/>
         </hlayout>
         </groupbox>
     </vlayout>
-</groupbox>
-<groupbox title="Atstovai" width="600px">
-           <vlayout spacing="15px">
-			<listbox maxlength="8" id="delegatesListbox"
-				sclass="z-listbox-autopaging" height="300px"
-				emptyMessage="Atstovų nerasta">
-
-				<listhead sizable="true">
-				    <listheader label="Id" width="20%" />
-					<listheader label="Vardas" width="20%" />
-					<listheader label="Pavardė" width="20%" />
-					<listheader label="Tel. Nr." width="20%" />
-					<listheader label="El. paštas" width="20%" />
-					<listheader label="Būsena" width="20%" />
-				</listhead>
-
-				<template name="model">
-					<listitem context="msg" height="5px"
-						sclass="z-listbox-autopaging">
-						<listcell label="${each.id}"></listcell>
-						<listcell height="20px" label="${each.name}"></listcell>
-						<listcell height="20px" label="${each.code}"></listcell>
-						<listcell height="20px" label="${each.phone}"></listcell>
-						<listcell height="20px" label="${each.mail}"></listcell>
-						<listcell height="20px" label="${each.active}"></listcell>
-					</listitem>
-				</template>
-			</listbox>
-		</vlayout>
-</groupbox>
-</hbox>		
-<include src="footer.zul"/>
+    </groupbox>
+    <include src="footer.zul"/>
 </zk>
