--- a/HelpDesk v1/WebContent/index.zul
+++ b/HelpDesk v1/WebContent/index.zul
@@ -21,8 +21,14 @@ contentType="text/html;charset=UTF-8"
 	<hbox>
 	<vbox>
 <groupbox title="Meniu">
-
-
+		<radiogroup>
+			<vlayout>
+				<radio label="Kreipinių statistika" selected="true"
+					onCheck="@global-command('configChanged', threeD=false, exploded=false)" />			
+				<radio label="Geriausi darbuotojai"
+					onCheck="@global-command('configChanged', threeD=true, exploded=false)" />
+			</vlayout>
+		</radiogroup>
 </groupbox>
 <vlayout apply="org.zkoss.bind.BindComposer" 
 	viewModel="@id('vm') @init('pie.PieChartConfigVM')">
